...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qOq-Qy-chF">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" label="Like"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="Hdd-k3-Dfi"/>
                                                        <constraint firstAttribute="width" constant="44" id="wLB-Pf-D4J"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" title="Like Button" image="Active"/>
...
                                <connections>
                                    <action selector="didTapShareButton:" destination="Tbm-Nr-ZgK" eventType="touchUpInside" id="dyx-qn-pgg"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iTH-nW-5ex">
                                <rect key="frame" x="8" y="67" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" label="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="ZeT-FH-iUr"/>
                                    <constraint firstAttribute="height" constant="48" id="r6v-di-Xbf"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button_white"/>
...
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                            </wkWebView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="nzd-Q0-LYF"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" label="UnsplashWebView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                    </view>
                    <navigationItem key="navigationItem" id="jIB-mR-Noo"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Lgu-99-sdc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
