...
    }
    
    // MARK: - LoginButton Setup
    
    private func setupLoginButton() {
        loginButton = UIButton(type: .system)
        loginButton.setTitle("Войти", for: .normal)
        loginButton.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .bold)
        loginButton.setTitleColor(UIColor(resource: .ypBlack), for: .normal)
        loginButton.backgroundColor = UIColor(resource: .ypWhite)
        loginButton.layer.masksToBounds = true
        loginButton.layer.cornerRadius = 16
        loginButton.contentMode = .scaleToFill
...
